# xmonad-config

./: .gitignore  LICENSE  README.org  package.yaml  stack.yaml  xmonad-config.cabal
src/: MyWorkspaces.hs  xmonad.hs  xmonad_previous.hs
src/Debug/: Debug.hs  TrackFloating.hs
src/PiMonad/: Scratches.hs  Workspaces.hs
src/XMonad/Actions/: BorderSnap.hs  Resubmap.hs
tests/: Properties.hs
tests/XMonad/Actions/: BorderSnapProperties.hs
xmonad/: xmonad.hs
