name:                xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dispanser/xmonad-config#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Peiselt
maintainer:          pi@kulturguerilla.org
copyright:           2017 Thomas Peiselt
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable xmonad-config
  hs-source-dirs:      src
  main-is:             xmonad.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xmonad
                     , xmonad-contrib
                     , containers
