name:                xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dispanser/xmonad-config#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Peiselt
maintainer:          pi@kulturguerilla.org
copyright:           2017 Thomas Peiselt
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     XMonad.Actions.BorderSnap
                     , MyWorkspaces
                     , Debug.TrackFloating
  other-modules:       Debug.Debug
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , xmonad>=0.13   && < 0.14
                     , xmonad-contrib>=0.13   && < 0.14

executable xmonad-config
  main-is:             src/xmonad.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , xmonad>=0.13   && < 0.14
                     , xmonad-contrib>=0.13   && < 0.14
                     , xmonad-config

test-suite properties
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:  base,
                  containers,
                  QuickCheck >= 2,
                  xmonad >= 0.13 && < 0.14,
                  xmonad-contrib>=0.13   && < 0.14,
                  xmonad-config
  main-is: Properties.hs
  default-language:    Haskell2010
